--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -51,7 +51,7 @@ Naming/HeredocDelimiterNaming:
 Naming/PredicateName:
   Enabled: false
 
-Naming/UncommunicativeMethodParamName:
+Naming/MethodParameterName:
   Enabled: false
 
 Style/Alias:
@@ -102,6 +102,9 @@ Style/PercentLiteralDelimiters:
     '%r': '()'
 
 Style/SpecialGlobalVars:
+  Enabled: false
+
+Style/StringConcatenation:
   Enabled: false
 
 Style/StringLiterals:
